Исправить: статус при создании пользователя на 200